force-app/main/default/objects/S3Settings__c/S3Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Amazon S3 Settings</description>
    <label>S3Settings</label>
</CustomObject>