force-app/main/default/objects/S3Settings__c/fields/awsAccessKeyId__c.field-meta.xml
<CustomField>
    <fullName>awsAccessKeyId__c</fullName>
    <label>AWS Access Key Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>