force-app/main/default/objects/S3Settings__c/fields/bucketName__c.field-meta.xml
<CustomField>
    <fullName>bucketName__c</fullName>
    <label>Bucket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>