force-app/main/default/objects/S3Settings__c/fields/bucketRegion__c.field-meta.xml
<CustomField>
    <fullName>bucketRegion__c</fullName>
    <label>Bucket Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>