force-app/main/default/objects/S3Settings__c/fields/secretAccessKey__c.field-meta.xml
<CustomField>
    <fullName>secretAccessKey__c</fullName>
    <label>Secret Acccess Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>